# monmouth-node

./: AGENTS.md  Cargo.toml  Justfile  README.md  deny.toml
contracts/: foundry.toml
contracts/cache/: solidity-files-cache.json
contracts/src/: IdentityRegistry.sol  ReputationRegistry.sol  ValidationRegistry.sol
contracts/test/: IdentityRegistry.t.sol  ReputationRegistry.t.sol  ValidationRegistry.t.sol
crates/e2e/: Cargo.toml  README.md
crates/e2e/src/: harness.rs  lib.rs  node.rs  setup.rs
crates/e2e/src/tests/: consensus.rs  execution.rs  resilience.rs
crates/network/marshal/: Cargo.toml  README.md
crates/network/marshal/src/: actor.rs  archive.rs  broadcast.rs  lib.rs  peers.rs
crates/network/marshal/tests/: integration.rs
crates/network/marshal/tests/common/: mod.rs
crates/network/transport/: Cargo.toml  README.md
crates/network/transport-sim/: Cargo.toml  README.md
crates/network/transport-sim/src/: lib.rs  provider.rs
crates/network/transport/src/: builder.rs  channels.rs  config.rs  error.rs  ext.rs  lib.rs  transport.rs
crates/node/builder/: Cargo.toml  README.md
crates/node/builder/src/: builder.rs  lib.rs  traits.rs
crates/node/config/: Cargo.toml  README.md
crates/node/config/src/: consensus.rs  error.rs  execution.rs  lib.rs  node.rs
crates/node/consensus/: Cargo.toml  README.md
crates/node/consensus/src/: application.rs  block.rs  error.rs  execution.rs  ledger.rs  lib.rs  proposal.rs  traits.rs
crates/node/consensus/src/components/: mempool.rs  seed.rs  snapshot.rs
crates/node/dkg/: Cargo.toml  README.md
crates/node/dkg/src/: ceremony.rs  config.rs  lib.rs  output.rs  protocol.rs  transport.rs
crates/node/domain/: Cargo.toml  README.md
crates/node/domain/src/: aliases.rs  block.rs  bootstrap.rs  events.rs  evm.rs  idents.rs  lib.rs  tx.rs
crates/node/executor/: Cargo.toml  README.md
crates/node/executor/src/: adapter.rs  classifier.rs  config.rs  context.rs  error.rs  lib.rs  outcome.rs  precompiles.rs  revm.rs  traits.rs  validation.rs
crates/node/executor/tests/: executor.rs
crates/node/ledger/: Cargo.toml  README.md
crates/node/ledger/src/: lib.rs
crates/node/reporters/: Cargo.toml  README.md
crates/node/reporters/src/: lib.rs
crates/node/rpc/: Cargo.toml  README.md
crates/node/rpc/src/: config.rs  eth.rs  indexed_provider.rs  kora.rs  lib.rs  monmouth.rs  server.rs  state.rs  state_provider.rs  types.rs
crates/node/runner/: Cargo.toml  README.md
crates/node/runner/src/: app.rs  error.rs  lib.rs  runner.rs  scheme.rs
crates/node/service/: Cargo.toml  README.md
crates/node/service/src/: lib.rs  runner.rs  service.rs  stubs.rs  traits.rs  transport_provider.rs
crates/node/simplex/: Cargo.toml  README.md
crates/node/simplex/src/: config.rs  engine.rs  lib.rs  pool.rs  quota.rs
crates/node/txpool/: Cargo.toml  README.md
crates/node/txpool/src/: lib.rs  ordering.rs  pool.rs  traits.rs  validator.rs
crates/storage/backend/: Cargo.toml  README.md
crates/storage/backend/src/: accounts.rs  backend.rs  code.rs  lib.rs  storage.rs  types.rs
crates/storage/handlers/: Cargo.toml  README.md
crates/storage/handlers/src/: adapter.rs  error.rs  lib.rs  qmdb.rs  state.rs
crates/storage/indexer/: Cargo.toml  README.md
crates/storage/indexer/src/: filter.rs  lib.rs  store.rs  types.rs
crates/storage/overlay/: Cargo.toml  README.md
crates/storage/overlay/src/: lib.rs  overlay.rs
crates/storage/qmdb/: Cargo.toml  README.md
crates/storage/qmdb-ledger/: Cargo.toml  README.md
crates/storage/qmdb-ledger/src/: ledger.rs  lib.rs
crates/storage/qmdb/src/: batch.rs  changes.rs  encoding.rs  error.rs  lib.rs  root.rs  store.rs  traits.rs
crates/storage/traits/: Cargo.toml  README.md
crates/storage/traits/src/: error.rs  lib.rs  state.rs
crates/utilities/cli/: Cargo.toml  README.md
crates/utilities/cli/src/: lib.rs  sigsegv.rs
crates/utilities/crypto/: Cargo.toml  README.md
crates/utilities/crypto/src/: lib.rs  test_utils.rs
crates/utilities/sys/: Cargo.toml  README.md
crates/utilities/sys/src/: lib.rs
docker/: Dockerfile  Justfile  README.md  docker-bake.hcl
docker/compose/: devnet.yaml
docker/config/: prometheus.yml
docker/grafana/dashboards/: monmouth-overview.json
docker/scripts/: devnet-run.sh  devnet-stats.sh  entrypoint.sh
docs/: expansion-research.md
examples/revm/: Cargo.toml  README.md
examples/revm/src/: cli.rs  config.rs  demo.rs  main.rs  outcome.rs  qmdb.rs  runner.rs  simulation.rs  tx.rs
examples/revm/src/application/: app.rs  mod.rs
examples/revm/src/application/ledger/: mod.rs  overlay.rs  snapshot_store.rs
examples/revm/src/application/node/: config.rs
examples/revm/src/application/reporters/: finalized.rs
examples/revm/src/node/: marshal.rs  mod.rs
examples/revm/src/simulation/: mod.rs
