[workspace]
members = ["bin/*", "crates/e2e", "crates/network/*", "crates/node/*", "crates/storage/*", "crates/utilities/*"]
default-members = ["bin/monmouth"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/MonmouthFND/monmouth-node"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = "warn"
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "packed"
incremental = false

[profile.release]
opt-level = 3
lto = "thin"
debug = false
strip = "symbols"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
# Local crates
monmouth-builder = { path = "crates/node/builder" }
monmouth-domain = { path = "crates/node/domain" }
monmouth-cli = { path = "crates/utilities/cli" }
monmouth-crypto = { path = "crates/utilities/crypto" }
monmouth-backend = { path = "crates/storage/backend" }
monmouth-config = { path = "crates/node/config" }
monmouth-consensus = { path = "crates/node/consensus" }
monmouth-executor = { path = "crates/node/executor" }
monmouth-ledger = { path = "crates/node/ledger" }
monmouth-marshal = { path = "crates/network/marshal" }
monmouth-reporters = { path = "crates/node/reporters" }
monmouth-service = { path = "crates/node/service" }
monmouth-simplex = { path = "crates/node/simplex" }
monmouth-transport = { path = "crates/network/transport" }
monmouth-transport-sim = { path = "crates/network/transport-sim" }
monmouth-sys = { path = "crates/utilities/sys" }
monmouth-handlers = { path = "crates/storage/handlers" }
monmouth-overlay = { path = "crates/storage/overlay" }
monmouth-qmdb = { path = "crates/storage/qmdb" }
monmouth-qmdb-ledger = { path = "crates/storage/qmdb-ledger" }
monmouth-traits = { path = "crates/storage/traits" }
monmouth-indexer = { path = "crates/storage/indexer" }
monmouth-dkg = { path = "crates/node/dkg" }
monmouth-runner = { path = "crates/node/runner" }
monmouth-rpc = { path = "crates/node/rpc" }
monmouth-txpool = { path = "crates/node/txpool" }
monmouth-e2e = { path = "crates/e2e" }

commonware-p2p = "0.0.65"
commonware-utils = "0.0.65"
commonware-codec = "0.0.65"
commonware-stream = "0.0.65"
commonware-macros = "0.0.65"
commonware-storage = "0.0.65"
commonware-runtime = "0.0.65"
commonware-resolver = "0.0.65"
commonware-parallel = "0.0.65"
commonware-broadcast = "0.0.65"
commonware-consensus = "0.0.65"
commonware-cryptography = "0.0.65"

# Alloy
alloy-primitives = "1.0"
alloy-consensus = { version = "1.0", features = ["k256"] }
alloy-eips = "1.0"
alloy-rlp = "0.3"

# Execution
revm = { version = "34.0.0", default-features = false }
alloy-evm = { version = "0.27.0", default-features = false }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
eyre = "0.6"

# Concurrency
parking_lot = "0.12"

# Misc
async-trait = "0.1"
anyhow = "1.0.100"
libc = "0.2"
rand = "0.8"
rand_core = "0.6"
governor = "0.10.4"
prometheus-client = "0.24.0"
bytes = "1"
hex = "0.4"
k256 = "0.13"
sha3 = "0.10"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Testing
rstest = "0.24"
tempfile = "3"
