[package]
name = "monmouth-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "End-to-end tests for Monmouth consensus network"

[lints]
workspace = true

[dependencies]
# Local crates
monmouth-consensus.workspace = true
monmouth-crypto = { workspace = true, features = ["test-utils"] }
monmouth-domain = { workspace = true, features = ["evm"] }
monmouth-executor.workspace = true
monmouth-ledger.workspace = true
monmouth-marshal.workspace = true
monmouth-overlay.workspace = true
monmouth-qmdb-ledger.workspace = true
monmouth-reporters.workspace = true
monmouth-simplex.workspace = true
monmouth-transport-sim.workspace = true

# Commonware
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-p2p.workspace = true
commonware-parallel.workspace = true
commonware-runtime.workspace = true
commonware-utils.workspace = true

# Alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true

# Async
futures.workspace = true
tokio = { workspace = true, features = ["time"] }

# Misc
rand.workspace = true

# Crypto
k256.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Tracing
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
