[package]
name = "monmouth-transport-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Simulated P2P transport for Monmouth node testing and development."

[lints]
workspace = true

[dependencies]
monmouth-config.workspace = true
monmouth-service.workspace = true
monmouth-transport.workspace = true

commonware-p2p.workspace = true
commonware-runtime.workspace = true
commonware-cryptography.workspace = true
commonware-utils.workspace = true

governor.workspace = true
prometheus-client.workspace = true
rand.workspace = true
thiserror.workspace = true
