[package]
name = "monmouth-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Consensus application layer for Monmouth"

[dependencies]
# Local crates
monmouth-config = { path = "../config" }
monmouth-domain = { path = "../domain" }
monmouth-executor = { path = "../executor" }
monmouth-qmdb = { path = "../../storage/qmdb" }
monmouth-traits = { path = "../../storage/traits" }

# Alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true

# Commonware
commonware-cryptography.workspace = true

# Synchronization
parking_lot.workspace = true

# Error handling
thiserror.workspace = true

# Async
futures.workspace = true

[dev-dependencies]
rstest = "0.24"
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
