[package]
name = "monmouth-executor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Block execution abstractions and REVM implementation for Monmouth"

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
futures.workspace = true
monmouth-qmdb = { path = "../../storage/qmdb" }
monmouth-traits = { path = "../../storage/traits" }
revm.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
