[package]
name = "monmouth-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ledger services for Monmouth nodes"

[lints]
workspace = true

[dependencies]
# Local crates
monmouth-consensus = { path = "../consensus" }
monmouth-domain = { path = "../domain" }
monmouth-overlay = { path = "../../storage/overlay" }
monmouth-qmdb-ledger = { path = "../../storage/qmdb-ledger" }
monmouth-traits = { path = "../../storage/traits" }

# Commonware
commonware-cryptography.workspace = true
commonware-runtime.workspace = true

# Alloy
alloy-primitives.workspace = true

# Async
futures.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
# Local crates
monmouth-executor = { path = "../executor" }

# Commonware
commonware-runtime.workspace = true
commonware-utils.workspace = true

# Execution
alloy-evm = { workspace = true, features = ["std"] }
alloy-consensus.workspace = true

# Crypto
k256.workspace = true
