[package]
name = "monmouth-reporters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Consensus reporters for Monmouth nodes"

[lints]
workspace = true

[dependencies]
# Local crates
monmouth-consensus = { path = "../consensus" }
monmouth-domain = { path = "../domain" }
monmouth-executor = { path = "../executor" }
monmouth-ledger = { path = "../ledger" }
monmouth-overlay = { path = "../../storage/overlay" }
monmouth-qmdb-ledger = { path = "../../storage/qmdb-ledger" }
monmouth-rpc = { path = "../rpc" }

# Commonware
commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-runtime.workspace = true
commonware-utils.workspace = true

# Alloy
alloy-primitives.workspace = true

# Tracing
tracing.workspace = true
