[package]
name = "monmouth-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Production node runner for Monmouth validators"

[dependencies]
monmouth-config.workspace = true
monmouth-consensus.workspace = true
monmouth-domain.workspace = true
monmouth-dkg.workspace = true
monmouth-executor.workspace = true
monmouth-ledger.workspace = true
monmouth-marshal.workspace = true
monmouth-overlay.workspace = true
monmouth-qmdb-ledger.workspace = true
monmouth-reporters.workspace = true
monmouth-rpc.workspace = true
monmouth-service.workspace = true
monmouth-simplex.workspace = true
monmouth-transport.workspace = true

commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-p2p.workspace = true
commonware-parallel.workspace = true
commonware-runtime.workspace = true
commonware-utils.workspace = true

alloy-consensus = { workspace = true }
alloy-primitives.workspace = true

axum = "0.8"
futures.workspace = true
tokio = { workspace = true, features = ["net"] }
tracing.workspace = true
anyhow.workspace = true
rand.workspace = true

[lints]
workspace = true
