[package]
name = "monmouth-handlers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Database handles with synchronization for Monmouth"

[lints]
workspace = true

[dependencies]
monmouth-qmdb = { path = "../qmdb" }
monmouth-traits = { path = "../traits" }

alloy-primitives.workspace = true
async-trait = "0.1"
futures.workspace = true
revm = { workspace = true, features = ["std", "asyncdb"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
