[package]
name = "monmouth-qmdb-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "QMDB-backed ledger adapter for Monmouth"

[lints]
workspace = true

[dependencies]
# Local crates
monmouth-backend = { path = "../backend" }
monmouth-handlers = { path = "../handlers" }
monmouth-qmdb = { path = "../qmdb" }
monmouth-traits = { path = "../traits" }
monmouth-domain = { path = "../../node/domain" }

# Commonware
commonware-runtime.workspace = true

# Alloy
alloy-primitives.workspace = true

# Error handling
thiserror.workspace = true

# Async
tokio.workspace = true
