[package]
name = "kora-qmdb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure QMDB store logic for Kora"

[dependencies]
alloy-primitives.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
rstest = "0.24"

[lints]
workspace = true
