[package]
name = "kora-traits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core trait abstractions for Kora storage and consensus"

[dependencies]
alloy-primitives.workspace = true
kora-qmdb = { path = "../qmdb" }

# Error handling
thiserror.workspace = true

[lints]
workspace = true
