[package]
name = "monmouth-traits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core trait abstractions for Monmouth storage and consensus"

[dependencies]
alloy-primitives.workspace = true
monmouth-qmdb = { path = "../qmdb" }

# Error handling
thiserror.workspace = true

[lints]
workspace = true
